
 ** A new syntax for object oriented programming termed classdef has been
    introduced.  See the manual for more extensive documentation of the
    classdef interface.
    
    New keywords:

      classdef      endclassdef
      enumeration   endenumeration
      events        endevents
      methods       endmethods
      properties    endproperties

 ** Interpolation function changes for Matlab compatibility

    The interpolation method 'cubic' is now equivalent to 'pchip'
    for interp1, interp2, and interp3.  Previously, 'cubic' was equivalent
    to 'spline' for interp2.  This may produce different results as 'spline'
    has continuous 1st and 2nd derivatives while 'pchip' only has a continuous
    1st derivative.

 ** Integer formats used in the printf family of functions now work for
    64-bit integers and are more compatible with Matlab when printing
    non-integer values.  Now instead of truncating, Octave will switch
    the effective format to '%g' in the following circumstances:

      * the value of an integer type (int8, uint32, etc.) value exceeds
        the maximum for the format specifier.  For '%d', the limit is
        intmax ('int64') and for '%u' it is intmax ('uint64').

      * round(x) != x or the value is outside the range allowed by the
        integer format specifier.

    There is still one difference:  Matlab switches to '%e' and Octave
    is currently switching to '%g'.

 ** Z-order stacking issues with patches, grid lines, and line object
    plot markers for on screen display and printing have all been resolved.
    For 2-D plots the axis grid lines can be placed on top of the plot
    with set (gca, "layer", "top").

 ** The patch graphic object has been overhauled.  It now produces visual
    results equivalent to Matlab even for esoteric combinations of
    faces/vertices/cdata.

 ** The polar() plot function now draws a circular theta axis and 
    radial rho axis rather than using a rectangular x/y axis.
