@@ -13,6 +13,10 @@ Summary of important user-visible changes for version 4.2:
       methods       endmethods
       properties    endproperties
 
+ ** New classes in Octave 4.2:
+
+      inputParser
+
  ** Interpolation function changes for Matlab compatibility
 
     The interpolation method 'cubic' is now equivalent to 'pchip'
